# test-llama.cpp

./: .gitignore  IMPROVEMENT-PLAN.md  README.md  batch_template.yaml  batch_test copy.yaml  pyproject.toml  rama.yaml  test_llama.yaml
.serena/: project.yml
config/: batch_gemma31b.yaml  batch_qwen27b.yaml  batch_qwen27b_kv.yaml  batch_test.yaml
rama/: __init__.py  __main__.py  context_test.py  core.py  launch.py  log.py  testing.py
rama/templates/: rama.yaml
rama/testing_modules/: __init__.py  base.py  batch_runner.py  code_runner.py  context_difficulty.py  enhanced_nihs.py  kv_quant.py  multi_seed.py  system_prompt.py  unified_runner.py  warmup.py
templates/: mistral-small-3.1-fix.jinja
test_llama/: __init__.py  __main__.py  context_test.py  core.py  launch.py  testing.py
tests/code/: alien_dictionary_order.json  alien_dictionary_order.txt  arithmetic_evaluator.json  arithmetic_evaluator.txt  candy_crush_board.json  candy_crush_board.txt  distinct_subsequences.json  distinct_subsequences.txt  expression_add_operators.json  expression_add_operators.txt  group_anagrams.json  group_anagrams.txt  inventory_service.txt  job_queue_service.txt  median_two_sorted_arrays.json  median_two_sorted_arrays.txt  merge_k_lists.json  merge_k_lists.txt  min_window.json  min_window.txt  process_logs.json  process_logs.txt  query_filter_parser.json  query_filter_parser.txt  rate_limiter.json  rate_limiter.txt  regex_matching.json  regex_matching.txt  remove_invalid_parentheses.json  remove_invalid_parentheses.txt  shortest_path_with_break.json  shortest_path_with_break.txt  smallest_range_k_lists.json  smallest_range_k_lists.txt  spiral_matrix.json  spiral_matrix.txt  substring_concatenation.json  substring_concatenation.txt  sudoku_solver.json  sudoku_solver.txt  (+8 more)
tests/debugging/: alien_dictionary_debug.json  alien_dictionary_debug.txt  binary_search.json  binary_search.txt  candy_crush_debug.json  candy_crush_debug.txt  (+48 more)
